# gaming-telemetry

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  hf_dataset_card.md  output.csv  upload_hf_dataset.py
.junie/memory/: feedback.md
docs/: verify_cyberpunk.schema.json
docs/examples/: verify_cyberpunk.pass.json  verify_cyberpunk.warning.json
src/: cpu.rs  main.rs
src/verify/: acf.rs  cli.rs  config.rs  crowd.rs  discovery.rs  dlss.rs  fs.rs  mod.rs  mods.rs  path.rs  render.rs  runtime.rs  schema.rs  types.rs  verdict.rs
tests/: verify_cli.rs
tests/fixtures/: appmanifest_1091500.acf
tests/fixtures/mods/pass/archive/pc/mod/: UltraRemoveFakePTLights.xl
tests/fixtures/mods/pass/r6/scripts/: UltraPlus.reds
tests/fixtures/mods/warning/archive/pc/mod/: HD Reworked Project.archive
tests/fixtures/proton/: UserSettings.json
tests/fixtures/runtime/: low.csv  pass.csv
