[package]
name = "gaming-telemetry"
version = "0.1.0"
license = "GPL-3.0"
edition = "2024"

[workspace]

[dependencies]
nvml-wrapper = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
polars = { version = "0.46", features = ["parquet", "lazy", "csv"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
duckdb = { version = "1.1", features = ["polars", "bundled"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
thiserror = "2.0"
walkdir = "2.5"
csv = "1.3"

[dev-dependencies]
tempfile = "3.15"
